# rfi-api

./: .gitignore  Cargo.toml  README.md
common/: Cargo.toml
common/src/: config.rs  lib.rs  log_init.rs
common/src/http/: fun.rs  mod.rs  response.rs
common/src/secp256k/: mod.rs
common/src/x25519/: device.rs  mod.rs  server.rs  signature.rs  x25519_chacha20poly1305.rs
models/: Cargo.toml  log.md
models/src/: app.rs  errors.rs  fun.rs  lib.rs
models/src/cache/: mod.rs
models/src/logic/: account.rs  account_device.rs  mod.rs
services/device/: Cargo.toml
services/device/src/: main.rs
services/device/src/handler/: mod.rs  parameter.rs  zpk.rs
services/elf/: Cargo.toml
services/elf/src/: main.rs
services/elf/src/handler/: mod.rs  parameter.rs
services/friend/: Cargo.toml
services/friend/src/: main.rs
