[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]

secp256k1 = { version = "0.28", features = ["global-context", "hashes"] }
# sha2 = "0.10"
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

serde_json = "1"
axum = { version = "0.7.0" }
# features = ["macros", "multipart"]

thiserror = "1"
anyhow = "1"

hkdf = "0.12.4"
sha2 = "0.10"
rand_chacha = "0.3.1"
rand_core = { version = "0.6", features = ["getrandom"] }
x25519-dalek = { version = "2.0.0", features = [
    "reusable_secrets",
    "static_secrets",
] }

tracing = "0.1"
tracing-appender = "0.2"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { version = "1", features = ["full"] }

# notify = "6.1.1"
# futures = "0.3"

toml = "0.8"
clap = { version = "4", features = ["derive"] }
chacha20poly1305 = "0.10"
