[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono","json"] }
chrono = { version = "0.4", features = ["serde"] }

dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

thiserror = { version = "1" }
fred = "8.0.6"
anyhow = "1.0"
